# Algorithm-Optimisation-for-the-Classification-of-Datasets-Containing-Contextual-and-Point-Anomalies

./: README.md
Research Project/: Algorithms.ipynb  Anomaly Generation.ipynb  CMakeLists.txt  C_OCSVM.ipynb  Cell Generation.ipynb  Classification.ipynb  DBSCAN.ipynb  Isolation Forest.ipynb  OCSVM.cpp  OCSVM.hpp  One-Class SVM.ipynb  mac-commands.sh  main.ipynb  requirements.txt  win-commands.bat
Research Project Code/: Algorithms.ipynb  Anomaly Generation.ipynb  C_OCSVM.ipynb  Cell Generation.ipynb  Classification.ipynb  DBSCAN.ipynb  Isolation Forest.ipynb  One-Class SVM.ipynb  mac-commands.sh  main.ipynb  requirements.txt  win-commands.bat
Research Project Code/C_files/: OCSVM.cpp  OCSVM.hpp  main.cpp  ocsvm_exec.bat  ocsvm_exec.sh
Research Project Code/Datasets/: air-quality-health-impact_anomaly.csv  bank-customer-churn-prediction_anomaly.csv  campus-placement-prediction_anomaly.csv  fetal-health-classifiation_anomaly.csv  student-grading_anomaly.csv  (+7 more)
Research Project/C_files/: ocsvm_exec.bat
Research Project/Code/: Algorithms.ipynb  Anomaly Generation.ipynb  Classification.ipynb  DBSCAN.ipynb  Isolation Forest.ipynb  One-Class SVM.ipynb
Research Project/Code/Datasets/: Untitled.ipynb  campus-placement-prediction.csv
Research Project/Datasets/: bank-customer-churn-prediction_anomaly.csv  campus-placement-prediction_anomaly.csv  fetal-health-classifiation_anomaly.csv  loan-approval-classification-dataset_anomaly.csv  patient-treatment-classification_anomaly.csv  predict-dropout-or-academic-success_anomaly.csv  student-performance-dataset_anomaly.csv
